--- a/Rpkg/DESCRIPTION
+++ b/Rpkg/DESCRIPTION
@@ -1,11 +1,10 @@
 Package: Rpkg
-Title: What the Package Does (One Line, Title Case)
+Title: String Splitting Helper
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person("Yuwen", "Luo", , "luoyuwen@example.com", role = c("aut", "cre"))
+Description: A package to split strings into substrings based on a specified pattern.
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
